Issue #3874: Distorted profile thumbnail

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1893,6 +1893,11 @@ ul#press_logos
     :margin
       :top 9px
 
+.conversation_participants
+  a:hover
+    :text-decoration none
+
+
 .stream_element.conversation
   :padding 8px
 
